# it515-initphase

./: .gitignore  CMakeLists.txt  initial  initial.cc  openmp.cc  phase5.cbp  solver  solver.cc  temp.out  test2.out
include/: functions.cc  functions.h
initial.dSYM/Contents/: Info.plist
initial.dSYM/Contents/Resources/DWARF/: initial
test/: CMakeLists.txt  solver_functions.cc  test_solver
